General bug fixes

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
             </div>
             <div class="navWrapperMobile">
                 <button onclick="toggleMenu()" class="navButton">
-                    <img src="/src/images/icons/menu.svg" class="emoji">
+                    <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
                     Menu
                 </button>
             </div>
@@ -102,18 +102,18 @@
                             media platforms too! Any account on any platform that isn't linked here is not me.</p>
                         <div class="socialMedias">
                             <div>
-                                <a class="socialMedia instagram"
+                                <a rel="noopener" target="_blank" class="socialMedia instagram"
                                     href="https://www.instagram.com/actuallyaridan/">Instagram</a>
                             </div>
                             <div>
-                                <a class="socialMedia aMusic" href="https://music.apple.com/profile/actuallyaridan" target="_blank">Apple Music</a>
+                                <a rel="noopener" class="socialMedia aMusic" href="https://music.apple.com/profile/actuallyaridan" target="_blank">Apple Music</a>
                             </div>
                             <div>
-                                <a class="socialMedia twitter" href="https://x.com/actuallyaridan" target="_blank">X (formerly
+                                <a rel="noopener" class="socialMedia twitter" href="https://x.com/actuallyaridan" target="_blank">X (formerly
                                     Twitter)</a>
                             </div>
                             <div>
-                                <a class="socialMedia threads" href="https://www.threads.net/@actuallyaridan" target="_blank">Threads
+                                <a rel="noopener" class="socialMedia threads" href="https://www.threads.net/@actuallyaridan" target="_blank">Threads
                                     (an
                                     Instagram app)</a>
                             </div>
