--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
             <div class="navWrapperMobile">
                 <button onclick="toggleMenu()" class="navButton">
-                    <img src="/src/images/icons/menu.svg" class="emoji">
+                    <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
                     Menu
                 </button>
             </div>
