--- a/mc.html
+++ b/mc.html
@@ -52,7 +52,7 @@
             </div>
             <div class="navWrapperMobile">
                 <button onclick="toggleMenu()" class="navButton">
-                    <img src="/src/images/icons/menu.svg" class="emoji">
+                    <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
                     Menu
                 </button>
             </div>
@@ -93,7 +93,7 @@
                                 <img class="imgWorld" draggable="false" src="/src/images/mc/world.png"
                                     alt="A screenshot of the Minecraft world">
                                 <div class="img-holder">
-                                    <a class="button green mcFont link mcMapButton" href="http://mc.aridan.net:8172"
+                                    <a rel="noopener" class="button green mcFont link mcMapButton" href="http://mc.aridan.net:8172"
                                         target="_blank">Explore
                                         the map →</a>
                                 </div>
