--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
             </div>
             <div class="navWrapperMobile">
                 <button onclick="toggleMenu()" class="navButton">
-                    <img src="/src/images/icons/menu.svg" class="emoji">
+                    <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
                     Menu
                 </button>
             </div>
@@ -82,10 +82,10 @@
                                     <div>
                                         <p class="projectStatus WIP">Work in progress</p>
                                         <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                                src="/src/images/emojis/link.svg"><br> <a
+                                                src="/src/images/emojis/link.svg"><br> <a rel="noopener"
                                                 href="https://aridan.net" target="_blank">aridan.net</a></p>
                                         <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                                src="/src/images/emojis/link.svg"><br> <a
+                                                src="/src/images/emojis/link.svg"><br> <a rel="noopener"
                                                 href="https://github.com/actuallyaridan/aridan.net" target="_blank">GitHub</a></p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
                                                 src="/src/images/emojis/teacher.svg"><br> HTML, CSS, JavaScript</p>
@@ -99,12 +99,12 @@
                                     <div>
                                         <p class="projectStatus WIP">Work in progress</p>
                                         <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                                src="/src/images/emojis/link.svg"><br> <a
+                                                src="/src/images/emojis/link.svg"><br> <a rel="noopener"
                                                 href="https://github.com/dimdenGD/OldTwitter/tree/master/_locales/sv" target="_blank">GitHub</a></p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
                                                 src="/src/images/emojis/teacher.svg"><br> i8n technology</p>
                                         <p class="projectLegal"><img draggable="false" class="emoji" alt=""
-                                                src="/src/images/emojis/judge.svg"><br> Owned by <a
+                                                src="/src/images/emojis/judge.svg"><br> Owned by <a rel="noopener"
                                                 href="https://dimden.dev" target="_blank">dimden</a></p>
                                     </div>
                                 </div>
