--- a/sv/contact.html
+++ b/sv/contact.html
@@ -90,18 +90,18 @@
                         <p class="subTitle">Vill du snacka på ett mindre formellt sätt? Jag är också på en massa sociala medier! Ser du en profil som inte är länkad här så är det inte jag.</p>
                         <div class="socialMedias">
                             <div>
-                                <a class="socialMedia instagram"
+                                <a rel="noopener" class="socialMedia instagram" target="_blank"
                                     href="https://www.instagram.com/actuallyaridan/">Instagram</a>
                             </div>
                             <div>
-                                <a class="socialMedia aMusic" href="https://music.apple.com/profile/actuallyaridan" target="_blank">Apple Music</a>
+                                <a rel="noopener" class="socialMedia aMusic" href="https://music.apple.com/profile/actuallyaridan" target="_blank">Apple Music</a>
                             </div>
                             <div>
-                                <a class="socialMedia twitter" href="https://x.com/actuallyaridan" target="_blank">X (tidigare
+                                <a rel="noopener" class="socialMedia twitter" href="https://x.com/actuallyaridan" target="_blank">X (tidigare
                                     Twitter)</a>
                             </div>
                             <div>
-                                <a class="socialMedia threads" href="https://www.threads.net/@actuallyaridan" target="_blank">Threads
+                                <a rel="noopener" class="socialMedia threads" href="https://www.threads.net/@actuallyaridan" target="_blank">Threads
                                     (en
                                     app från Instagram)</a>
                             </div>
