--- a/sv/experiences.html
+++ b/sv/experiences.html
@@ -71,7 +71,7 @@
                             <div class="centerer">
                                 <div class="centererItems">
                                     <a href="cv" class="cvButton">Begär CV</a>
-                                    <a class="socialMedia linkedin"
+                                    <a rel="noopener" class="socialMedia linkedin"
                                         href="https://www.linkedin.com/in/adnan-bukvic-b220b1277/"
                                         target="_blank">LinkedIn</a>
                                 </div>
@@ -88,7 +88,7 @@
                                     <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
                                             src="/src/images/emojis/clock.svg"><br>nov 2022 - okt 2023</p>
                                     <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/link.svg"> <a href="https://itcarestore.se"
+                                            src="/src/images/emojis/link.svg"> <a rel="noopener" href="https://itcarestore.se"
                                             target="_blank"><br>itcarestore.se</a></p>
                                     <p class="projectLearned"><img draggable="false" class="emoji" alt=""
                                             src="/src/images/emojis/teacher.svg"><br>Webbutveckling <br>Kundbemötande <br>Tekniska reparationer</p>
@@ -108,7 +108,7 @@
                                     <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
                                             src="/src/images/emojis/clock.svg"><br>agu 2020 - jun 2023</p>
                                     <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/link.svg"> <a href="https://teknikum.se"
+                                            src="/src/images/emojis/link.svg"> <a rel="noopener" href="https://teknikum.se"
                                             target="_blank"><br>teknikum.se</a></p>
                                     <p class="projectLearned"><img draggable="false" class="emoji" alt=""
                                             src="/src/images/emojis/teacher.svg"><br>Nätverk <br>Datorer <br>Webbutveckling<br>
