--- a/sv/projects.html
+++ b/sv/projects.html
@@ -78,10 +78,10 @@
                                 <div>
                                     <p class="projectStatus WIP">Pågår</p>
                                     <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/link.svg"> <a href="https://aridan.net"
+                                            src="/src/images/emojis/link.svg"> <a rel="noopener" href="https://aridan.net"
                                             target="_blank"><br>aridan.net</a></p>
                                     <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/link.svg"> <a
+                                            src="/src/images/emojis/link.svg"> <a rel="noopener"
                                             href="https://github.com/actuallyaridan/aridan.net"
                                             target="_blank"><br>GitHub</a></p>
                                     <p class="projectLearned"><img draggable="false" class="emoji" alt=""
@@ -96,14 +96,14 @@
                                 <div>
                                     <p class="projectStatus WIP">Pågår</p>
                                     <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/link.svg"> <a
+                                            src="/src/images/emojis/link.svg"> <a rel="noopener"
                                             href="https://github.com/dimdenGD/OldTwitter/tree/master/_locales/sv"
                                             target="_blank"><br>GitHub</a></p>
                                     <p class="projectLearned"><img draggable="false" class="emoji" alt=""
                                             src="/src/images/emojis/teacher.svg"><br>Översättnings-teknologi
                                     </p>
                                     <p class="projectLegal"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/judge.svg"><br>Ägs av <a href="https://dimden.dev"
+                                            src="/src/images/emojis/judge.svg"><br>Ägs av <a rel="noopener" href="https://dimden.dev"
                                             target="_blank">dimden</a></p>
                                 </div>
                             </div>
