--- a/sv/settings.html
+++ b/sv/settings.html
@@ -61,7 +61,7 @@
                 <div class="setting">
                     <ul>
                         <li>
-                            <p>Språk</p>
+                            <p><label for="language-select">Språk</label></p>
                             <div>
                                 <select class="button" id="language-select">
                                     <option value="sv" selected>Svenska</option>
@@ -110,7 +110,7 @@
                 <div class="setting">
                     <ul>
                         <li>
-                            <p>Utför animationer</p>
+                            <p><label for="animations">Utför animationer</label></p>
                             <div>
                                 <label class="switch">
                                     <input type="checkbox" id="animations" name="show-animations" value="true" checked>
