--- a/experiences.html
+++ b/experiences.html
@@ -42,7 +42,7 @@
             </div>
             <div class="navWrapperMobile">
                 <button onclick="toggleMenu()" class="navButton">
-                    <img src="/src/images/icons/menu.svg" class="emoji">
+                    <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
                     Menu
                 </button>
             </div>
@@ -123,7 +123,7 @@
                             <div class="centerer">
                                 <div class="centererItems">
                                     <button onclick="cvModalToggle()" class="cvButton">Request CV/resume</button>
-                                    <a class="socialMedia linkedin"
+                                    <a rel="noopener" class="socialMedia linkedin"
                                         href="https://www.linkedin.com/in/adnan-bukvic-b220b1277/"
                                         target="_blank">LinkedIn</a>
                                 </div>
@@ -143,7 +143,7 @@
                                             src="/src/images/emojis/clock.svg"><br> Nov 2022 - Oct 2023
                                     </p>
                                     <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/link.svg"><br> <a href="https://itcarestore.se"
+                                            src="/src/images/emojis/link.svg"><br> <a rel="noopener" href="https://itcarestore.se"
                                             target="_blank">itcarestore.se</a></p>
                                     <p class="projectLearned"><img draggable="false" class="emoji" alt=""
                                             src="/src/images/emojis/teacher.svg"><br> Web Development <br>Customer
@@ -165,7 +165,7 @@
                                             src="/src/images/emojis/clock.svg"><br> Aug 2020 - Jun 2023
                                     </p>
                                     <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/link.svg"><br> <a href="https://teknikum.se"
+                                            src="/src/images/emojis/link.svg"><br> <a rel="noopener" href="https://teknikum.se"
                                             target="_blank">teknikum.se</a></p>
                                     <p class="projectLearned"><img draggable="false" class="emoji" alt=""
                                             src="/src/images/emojis/teacher.svg"><br>Networking <br>Computers<br> Web
