--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                 <span>
                                     <div id="dcNameContainer">
                                         <p class="projectName" id="dcActivityHeaderName">Discord activity</p>
-                                        <p id="statusWrapper" class="dcloading">loading</p>
+                                        <p id="statusWrapper" class="dcloading">Loading</p>
                                     </div>
                                 </span>
                                 <div id="landyardDiscord">
