--- a/sv/index.html
+++ b/sv/index.html
@@ -90,7 +90,7 @@
                             <div class="project">
                                 <span id="dcNameContainer">
                                 <p class="projectName" id="dcActivityHeaderName">Discord-aktivitet</p>
-                                <p id="statusWrapper" class="dcloading">laddar</p>
+                                <p id="statusWrapper" class="dcloading">Laddar</p>
 
                                 </span>
 
